--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
 <html>
-    <head></head>
-    <body>index<body>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
